--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - IMPLICIT_WAIT=10
       - PAGE_LOAD_TIMEOUT=30
       - MAXIMIZE_WINDOW=true
+      - ENVIRONMENT=test
     command: >
       bash -c "
         behave --tags=@smoke 
