Add Render deployment configuration

--- a/behave.ini
+++ b/behave.ini
@@ -8,7 +8,7 @@ show_timings = true
 # Use color output
 color = true
 
-# Default output format (pretty console + allure)
+# Default output format
 default_format = pretty
 
 # Dry run (don't execute steps, just parse)
@@ -16,9 +16,6 @@ dry_run = false
 
 # Stop on first failure
 stop = false
-
-# Run specific tags (can override with command line)
-# tags = @smoke
 
 # Output directory for reports
 paths = features
@@ -30,24 +27,26 @@ logging_level = INFO
 logging_format = %(levelname)s:%(name)s:%(message)s
 
 # Capture stdout
-stdout_capture = true
+stdout_capture = false
 
 # Capture stderr  
-stderr_capture = true
+stderr_capture = false
 
 # Capture logging
-log_capture = true
+log_capture = false
 
 # Summary output
 summary = true
 
-# ==================== MULTIPLE FORMATTERS ====================
-# You can use multiple formatters simultaneously
+# ==================== FORMATTERS ====================
+# Multiple formatters
 format = allure_behave.formatter:AllureFormatter
-         behave_html_formatter:HTMLFormatter
          pretty
-         json.pretty
 
+# Output files (one per formatter, in same order)
+# allure needs a directory, so we specify it differently
 outfiles = reports/allure-results
-           reports/report.html
-           reports/report.json
+
+# ==================== ALLURE CONFIGURATION ====================
+[allure]
+results_directory = reports/allure-results
