--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ webdriver-manager==4.0.1
 allure-behave==2.13.2
 behave-html-formatter==0.9.10
 
+
 # Utilities
 python-dotenv==1.0.0
 Faker==20.1.0
@@ -36,3 +37,7 @@ Pillow==10.1.0
 
 # Date/Time utilities
 python-dateutil==2.8.2
+
+# Live Demo Dependencies
+streamlit==1.29.0
+pyngrok==7.0.5
